fix: Fix the title profile pic alignment on group component

--- a/src/app/page/group/group.component.scss
+++ b/src/app/page/group/group.component.scss
@@ -19,6 +19,11 @@
     padding-left: 16px;
     padding-right: 16px;
 
+    app-profile-icon {
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+
     .name {
       margin-left: 8px;
       font-weight: bold;
